--- a/src/chunks/footer.pug
+++ b/src/chunks/footer.pug
@@ -16,7 +16,7 @@ footer.footer
                     .navbar__item
                         a.navbar__link(href="#") Контакты
             .footer__col
-                ul.contacts.contacts_inline
+                ul.contacts
                     li.contacts__item
                         a.contacts__link.contacts__link_email(href="mailto:info@inkam.org.ru") info@inkam.org.ru
                     li.contacts__item
