--- a/src/product.pug
+++ b/src/product.pug
@@ -23,7 +23,7 @@ html(lang="ru")
                             .content__label.mb-20 Уникальное предложение
                             .content__title Скидка до&nbsp;80% на&nbsp;покупку 2&nbsp;СДХ от&nbsp;HUAWEI
                             .content__offer.mt-20 + лицезии HyperMetro бесплатно!
-            section.content
+            section.content.pt-0
                 .container
                     p.heading.heading_small Ключевые Вендоры компании Инкам
                     .d-flex.justify-content-between.align-items-center
@@ -50,9 +50,9 @@ html(lang="ru")
             section.block-content
                 .container
                     .row
-                        .col-5
-                            p.mb-0.h3 Комплексная поставка компьютерного оборудования для бизнеса
-                        .col-6 
+                        .col-5.col-md-12.col-lg-8.mb-lg-40
+                            p.h3 Комплексная поставка компьютерного оборудования для бизнеса
+                        .col-6.col-md-12.col-lg-9
                             p.mb-0.text-dark-blue Мы предлагаем исчерпывающий ассортимент IT-решений для бизнеса, 
                                 | что позволяет подобрать оптимальное техническое оснащение, которое поможет достигать 
                                 | поставленных целей. Наши инженеры разрабатывают и интегрируют в бизнес-процессы 
@@ -61,31 +61,31 @@ html(lang="ru")
             section.vendor
                 .container
                     .row
-                        .col-4
-                            .service.vendor__item
+                        .col-4.col-sm-12.col-md-9
+                            .service.service_first-child.vendor__item
                                 a.vendor__modal(data-fancybox="test1" data-src="#test" href="javascript:;") ?
                                 .row.align-items-center
-                                    .col-4
+                                    .col-4.col-lg-12.col-md-4.mb-lg-20.mb-md-0
                                         img.img-fluid(src="../img/logo/1.jpg")
-                                    .col-8
+                                    .col-8.col-lg-12.col-md-8
                                         p.vendor__title Вендор 1
                                         a.vendor__link(href="#") + сертификат партнерства
-                        .col-4
+                        .col-4.col-sm-12.col-md-9.mt-md-20.mt-sm-0
                             .service.vendor__item
                                 a.vendor__modal(data-fancybox="test2" data-src="#test" href="javascript:;") ?
                                 .row.align-items-center
-                                    .col-4
+                                    .col-4.col-lg-12.col-md-4.mb-lg-20.mb-md-0
                                         img.img-fluid(src="../img/logo/2.jpg")
-                                    .col-8
+                                    .col-8.col-lg-12.col-md-8
                                         p.vendor__title Вендор 2
                                         a.vendor__link(href="#") + сертификат партнерства
-                        .col-4
+                        .col-4.col-sm-12.col-md-9.mt-md-20.mt-sm-0
                             .service.vendor__item
                                 a.vendor__modal(data-fancybox="test3" data-src="#test" href="javascript:;") ?
                                 .row.align-items-center
-                                    .col-4
+                                    .col-4.col-lg-12.col-md-4.mb-lg-20.mb-md-0
                                         img.img-fluid(src="../img/logo/3.jpg")
-                                    .col-8
+                                    .col-8.col-lg-12.col-md-8
                                         p.vendor__title Вендор 3
                                         a.vendor__link(href="#") + сертификат партнерства
             section.catalog
@@ -101,7 +101,7 @@ html(lang="ru")
                             option(value="2") Сфера 2
                             option(value="3") Сфера 3            
                     .row
-                        .col-3
+                        .col-3.col-sm-12.col-md-6.col-lg-4
                             .solution
                                 .solution__image
                                     img.solution__vendor-logo(src="../img/logo/4.jpg")
@@ -110,7 +110,7 @@ html(lang="ru")
                                     span  / 
                                     span Сфера 1
                                 a.solution__title(href="/") Решение 1
-                        .col-3
+                        .col-3.col-sm-12.col-md-6.col-lg-4
                             .solution
                                 .solution__image
                                     img.solution__vendor-logo(src="../img/logo/5.jpg")
@@ -118,7 +118,7 @@ html(lang="ru")
                                     span.text-bold Вендор 1
                                     span  / Сфера 1
                                 a.solution__title(href="/") Решение 2
-                        .col-3
+                        .col-3.col-sm-12.col-md-6.col-lg-4
                             .solution
                                 .solution__image
                                     img.solution__vendor-logo(src="../img/logo/6.jpg")
