--- a/src/project.pug
+++ b/src/project.pug
@@ -15,62 +15,61 @@ html(lang="ru")
             section.block-project
                 .container
                     .row.no-gutters
-                        .col-6
+                        .col-6.col-sm-12.col-md-12.col-lg-6
                             .block-project__col
                                 h1 Реализованные проекты
                                 p Lorem ipsum dolor sit amet. Libero tempore, cum soluta nobis est eligendi optio, cumque nihil impedit. Eveniet, ut enim ipsam voluptatem, quia voluptas sit, amet, consectetur, adipisci velit. Sunt in culpa, qui in ea commodi autem quibusdam.
-                        .col-6.d-flex
-                            .service.service_project.service_highlight.service_bb-hide
-                                .row.align-items-center
-                                    .col-4
+                        .col-6.d-flex.col-sm-12.col-md-6.col-lg-6
+                            .service.service_project.service_highlight.service_bb-hide.service_first-child
+                                .row.align-items-center.text-lg-center
+                                    .col-4.col-lg-12
                                         img.img-fluid.service__img(src="../img/rzd.jpg")
-                                    .col-8
-                                        a.service__title.text-bold.h5(href="#") Комплексная реализация инфраструктуры
+                                    .col-8.col-lg-12
+                                        a.service__title.text-bold(href="#") Комплексная реализация инфраструктуры
                                         p.service__company Головной МФЦ
                                         p.service__location.mb-0 г. Йошкар-Ола, республика Марий Эл
-                        .col-3.d-flex
+                        .col-3.d-flex.col-sm-12.col-md-6.col-lg-6.col-xl-4
                             .service.service_project.text-center
                                 img.img-fluid.service__img(src="../img/RT_full_logo.png")
                                 a.service__title.text-bold.h6(href="#") Комплексные решения
                                 p.service__company Макрорегиональный филиал «Сибирь» ПАО «Ростелеком»
                                 p.service__location.mb-0 г. Новосибирск
-                        .col-3.d-flex
+                        .col-3.d-flex.col-sm-12.col-md-6.col-lg-6.col-xl-4
                             .service.service_project.service_bl-hide.text-center
                                 img.img-fluid.service__img(src="../img/logo.png")
                                 a.service__title.text-bold.h6(href="#") Комплексные решения
                                 p.service__company ПАО «Вымпелком»
                                 p.service__location.mb-0 г. Ярославль, г. Кострома, г. Иваново
-                        .col-3.d-flex
+                        .col-3.d-flex.col-sm-12.col-md-6.col-lg-6.col-xl-4
                             .service.service_project.service_bl-hide.text-center
                                 img.img-fluid.service__img(src="../img/transmash_logo.png")
                                 a.service__title.text-bold.h6(href="#") Поставка оборудования
                                 p.service__company Макрорегиональный филиал «Сибирь» ПАО «Ростелеком»
                                 p.service__location.mb-0 г. Санкт-Петербург
-                        .col-3.d-flex
+                        .col-3.d-flex.col-sm-12.col-md-6.col-lg-6.col-xl-4
                             .service.service_project.service_bl-hide.text-center
                                 img.img-fluid.service__img(src="../img/rzd.jpg")
                                 a.service__title.text-bold.h6(href="#") Поставка оборудования и развитие сети
                                 p.service__company Макрорегиональный филиал «Центр» ПАО «Ростелеком»
                                 p.service__location.mb-0 г. Москва
-                        .col-3.d-flex
+                        .col-3.d-flex.col-sm-12.col-md-6.col-lg-6.col-xl-4
                             .service.service_project.service_bt-hide.text-center
                                 img.img-fluid.service__img(src="../img/RT_full_logo.png")
                                 a.service__title.text-bold.h6(href="#") Комплексные решения
                                 p.service__company Макрорегиональный филиал «Сибирь» ПАО «Ростелеком»
                                 p.service__location.mb-0 г. Новосибирск
-                        .col-3.d-flex
+                        .col-3.d-flex.col-sm-12.col-md-6.col-lg-6.col-xl-4
                             .service.service_project.service_bt-hide.service_bl-hide.text-center
                                 img.img-fluid.service__img(src="../img/logo.png")
                                 a.service__title.text-bold.h6(href="#") Комплексные решения
                                 p.service__company ПАО «Вымпелком»
                                 p.service__location.mb-0 г. Ярославль, г. Кострома, г. Иваново
-                        .col-3.d-flex
+                        .col-3.d-flex.col-sm-12.col-md-6.col-lg-6.col-xl-4
                             .service.service_project.service_bt-hide.service_bl-hide.text-center
                                 img.img-fluid.service__img(src="../img/transmash_logo.png")
                                 a.service__title.text-bold.h6(href="#") Поставка оборудования
                                 p.service__company Макрорегиональный филиал «Сибирь» ПАО «Ростелеком»
                                 p.service__location.mb-0 г. Санкт-Петербург
-                        
         include chunks/footer.pug
         script(src="./js/jquery.min.js")
         script(src="./js/jquery.inputmask.js")
