--- a/src/service.pug
+++ b/src/service.pug
@@ -15,16 +15,16 @@ html(lang="ru")
             section.bg-gradient.title
                 .container
                     .row.justify-content-between
-                        .col-6
+                        .col-6.col-sm-12.col-md-12.col-lg-5
                             h1.heading Услуги компании
-                        .col-5 
+                        .col-5.col-sm-12.col-md-10.col-lg-7
                             p.subheading.subheading_light Разработка и внедрение IT-решений
                             .subheading-line.subheading-line_light
                             p Компания “ИНКАМ” - мультивендорный системный интегратор, оказывающий полный спектр ИТ-услуг и предлагающий высококачественные решения, ориентированные на удовлетворение потребностей крупных, средних и небольших компаний различных сфер деятельности.
             section.content
                 .container
                     .row.no-gutters
-                        .col-4
+                        .col-4.col-sm-12.col-md-12
                             .task.task_tab
                                 .task__title Предпроектное обследование
                                 .task__tab-content 
@@ -56,7 +56,7 @@ html(lang="ru")
                                         li минимизация рисков, связанных с использованием ИТ;
                                         li понимание слабых мест и участков сети или системы, способных привести к нестабильной работе;
                                         li получение картины затрат на реализацию проекта, что полезно на стадии принятия решения о запуске;
-                        .col-4
+                        .col-4.col-sm-12.col-md-12
                             .task.task_tab
                                 .task__title Проектирование
                                 .task__tab-content 
@@ -87,7 +87,7 @@ html(lang="ru")
                                         li минимизация рисков, связанных с использованием ИТ;
                                         li понимание слабых мест и участков сети или системы, способных привести к нестабильной работе;
                                         li получение картины затрат на реализацию проекта, что полезно на стадии принятия решения о запуске;
-                        .col-4
+                        .col-4.col-sm-12.col-md-12
                             .task.task_tab
                                 .task__title Строительство сети
                                 .task__tab-content 
@@ -110,41 +110,43 @@ html(lang="ru")
                                         li получение картины затрат на реализацию проекта, что полезно на стадии принятия решения о запуске;
             section.content.content_offset.bg-light
                 .container
-                    p.h4.mb-40 Внедрение IТ-решений «под ключ» позволит вам:
-                    .row.advantage.advantage_with-icon
-                        .col-4.d-flex.mb-20
+                    .row.justify-content-md-center
+                        .col-12.col-sm-12.col-md-8.col-lg-12.col-xl-10.mb-40
+                            p.h4.text-md-center.text-sm-left Внедрение IТ-решений «под ключ» позволит вам:
+                    .row.advantage.advantage_with-icon.justify-content-md-center
+                        .col-4.d-flex.mb-20.col-sm-12.mb-md-20.col-md-8.col-lg-6.col-xl-5
                             .advantage__item эффективно использовать IT-ресурсы
                                 img.advantage__icon.position-1(src="../img/clipboard-check.svg")
-                        .col-4.d-flex.mb-20
+                        .col-4.d-flex.mb-20.col-sm-12.mb-md-20.col-md-8.col-lg-6.col-xl-5
                             .advantage__item минимизировать риски с&nbsp;технической стороны
                                 img.advantage__icon.position-2(src="../img/lightbulb.svg")
-                        .col-4.d-flex.mb-20
+                        .col-4.d-flex.mb-20.col-sm-12.mb-md-20.col-md-8.col-lg-6.col-xl-5
                             .advantage__item снизить затраты на&nbsp;реализацию проекта
                                 img.advantage__icon.position-3(src="../img/credit-card.svg")
-                        .col-4.d-flex
+                        .col-4.d-flex.col-sm-12.mb-md-20.col-md-8.col-lg-6.col-xl-5
                             .advantage__item грамотно планировать расширение структуры
                                 img.advantage__icon.position-4(src="../img/map.svg")
-                        .col-4.d-flex
+                        .col-4.d-flex.col-sm-12.mb-md-20.col-md-8.col-lg-6.col-xl-5
                             .advantage__item получить оборудование в&nbsp;короткие сроки
                                 img.advantage__icon.position-5(src="../img/clock.svg")
-                        .col-4.d-flex
+                        .col-4.d-flex.col-sm-12.col-md-8.col-lg-6.col-xl-5
                             .advantage__item рассчитывать на&nbsp;техподдержку 24/7
                                 img.advantage__icon.position-6(src="../img/diamond.svg")
             section.content.content_offset
                 .container
                     .row.justify-content-between
-                        .col-8
+                        .col-8.col-md-12.col-lg-7.col-xl-8
                             p.h1.mb-40 IT-решения
                             .row.no-gutters
-                                .col-6.d-flex
-                                    .service.service_content-hover
+                                .col-6.d-flex.col-sm-12.col-md-6
+                                    .service.service_first-child.service_content-hover
                                         .service__title Сетевая инфраструктура
                                         .service__content
                                             p.mb-0.text-small Передача данных <br>
                                                 | Транспортные и опорные сети <br>
                                                 | Фиксированный доступ и радиодоступ <br>
                                                 | Система управления сетью
-                                .col-6.d-flex
+                                .col-6.d-flex.col-sm-12.col-md-6
                                     .service.service_content-hover.service_bl-hide
                                         .service__title Информационная безопасность
                                         .service__content
@@ -152,20 +154,20 @@ html(lang="ru")
                                                 | Транспортные и опорные сети <br>
                                             p.text-small.mb-0 Передача данных <br>
                                                 | Транспортные и опорные сети <br>
-                                .col-6.d-flex
+                                .col-6.d-flex.col-sm-12.col-md-6
                                     .service.service_content-hover.service_bt-hide
                                         .service__title Связь и коллективная работа
                                         .service__content
                                             p.text-small.mb-0 Передача данных <br>
                                                     | Транспортные и опорные сети
-                                .col-6.d-flex
+                                .col-6.d-flex.col-sm-12.col-md-6
                                     .service.service_content-hover.service_bt-hide.service_bl-hide
                                         .service__title ЦОД
                                         .service__content
                                             p.text-small.mb-0 Передача данных <br>
                                                     | Транспортные и опорные сети <br>
                                                     | Транспортные и опорные сети
-                        .col-3
+                        .col-3.col-md-12.mt-md-40.col-lg-5.col-xl-4
                             p.subheading Нас рекомендуют
                             .subheading-line.subheading-line_sidebar
                             .slider.slider_review
