--- a/src/text.pug
+++ b/src/text.pug
@@ -33,21 +33,22 @@ html(lang="ru")
                                 li list-item-4
                                 li list-item-5
                             p Lorem ipsum dolor sit amet. Praesentium voluptatum deleniti atque corrupti. Ipsam voluptatem, quia non provident, similique sunt. Doloribus asperiores repellat. cumque nihil impedit, quo minus id, quod maxime. Aspernatur aut rerum necessitatibus saepe. Sit voluptatem sequi nesciunt, neque porro quisquam est, qui dolorem eum fugiat. Hic tenetur a sapiente delectus, ut aliquid ex ea voluptate. Sint, obcaecati cupiditate non provident, similique sunt in ea voluptate velit esse.
-                            table
-                                thead
-                                    tr
-                                        th название столбца 1
-                                        th название столбца 2
-                                        th название столбца 3
-                                tbody
-                                    tr
-                                        td ячейка 1
-                                        td ячейка 2
-                                        td ячейка 3
-                                    tr
-                                        td ячейка 1
-                                        td ячейка 2
-                                        td ячейка 3
+                            .table-responsive
+                                table
+                                    thead
+                                        tr
+                                            th название столбца 1
+                                            th название столбца 2
+                                            th название столбца 3
+                                    tbody
+                                        tr
+                                            td ячейка 1
+                                            td ячейка 2
+                                            td ячейка 3
+                                        tr
+                                            td ячейка 1
+                                            td ячейка 2
+                                            td ячейка 3
         include chunks/footer.pug
         script(src="./js/jquery.min.js")
         script(src="./js/jquery.inputmask.js")
