--- a/src/company.pug
+++ b/src/company.pug
@@ -15,18 +15,18 @@ html(lang="ru")
             section.bg-gradient.title
                 .container
                     .row.justify-content-between.align-items-center
-                        .col-6
+                        .col-6.col-sm-12.col-md-12.col-lg-5
                             h1.heading Системный интегратор
-                        .col-5 
+                        .col-5.col-sm-12.col-md-10.col-lg-7
                             p.subheading.subheading_light О КОМПАНИИ «ИНКАМ»
                             .subheading-line.subheading-line_light
                             p Мультивендорный системный интегратор созданный профессионалами с многолетним опытом в области коммуникаций и информационных технологий. Компания является надежным поставщиком высокотехнологичных и инновационных IT-решений для вашего бизнеса.  
             section.block-partners
                 .container
                     .row.align-items-center
-                        .col-3
+                        .col-3.col-sm-12.mb-sm-20.col-md-5.col-lg-4
                             p.heading Нам доверяют:
-                        .col-9
+                        .col-9.col-sm-12.col-md-7.col-lg-8
                             .slider.slider_logo
                                 .slider__item
                                     img.img-fluid(src="../img/RT_full_logo.png")
@@ -39,54 +39,54 @@ html(lang="ru")
             section.content.content_offset
                 .container
                     .row.align-items-center
-                        .col-5
+                        .col-5.col-md-12.col-lg-9
                             p.h3.mb-40 С нами работают крупнейшие компании по всей России
                             p ИНКАМ на рынке с 2013 года, и результат нашей работы — это разработка и внедрение более 100 IT-решений и технологий на предприятия, работающие по всей России. 
-                        .col-7
+                        .col-7.col-md-12.mt-sm-20.col-lg-12
                             img.img-fluid(src="../img/maps-russia.svg")
             section.block-service.bg-light
                 .container
                     p.heading.mb-40 ИНКАМ сегодня  — это
                     .row
-                        .col-6.d-flex
+                        .col-6.d-flex.col-md-12
                             .block-service__block
                                 p.h6.text-bold.text-blue Квалифицированные технические специалисты
                                 p От монтажников до проектировщиков - весь персонал имеет необходимый опыт и уровень компетенций и несут ответственность за каждый этап работы: от создания проектной документации до сдачи проекта “под ключ”. Являясь авторизированными партнерами ведущих вендоров, мы имеем в своем штате инженеров, прошедших многоступенчатое обучение и предоставляющих квалифицированные сервисные услуги: от ввода техники до составление индивидуального контракта на обслуживание (SLA).
-                        .col-6.d-flex
+                        .col-6.d-flex.col-md-12.mt-md-40
                             .block-service__block
                                 p.h6.text-bold.text-blue Работа с любой компанией в любом городе России
                                 p Нам важен каждый заказчик! Предоставляем услуги для крупных, средних и небольших компаний. Работаем по всей России вне зависимости от региона и предоставляем услуги по моделированию, поставки оборудования и интеграции высокотехнологичных решений. 
-                        .col-6.d-flex.mt-40
+                        .col-6.d-flex.mt-40.col-md-12
                             .block-service__block
                                 p.h6.text-bold.text-blue Высокая скорость обработки запросов
                                 p Оперативная обработка потребностей заказчика и выдача предложений, позволит разработать решение даже в короткие сроки. После завершения проекта осуществляем техническую поддержку 24/7: мы всегда остаемся “на связи” и готовы помочь вам в решении технических вопросов и устранения любых неполадок. 
-                        .col-6.d-flex.mt-40
+                        .col-6.d-flex.mt-40.col-md-12
                             .block-service__block
                                 p.h6.text-bold.text-blue Решения под потребности заказчика
                                 p С 2013 года моделируем и разрабатываем решения в соответствии с потребностями заказчика. Опыт позволяет проводить объективный анализ инфраструктур и разрабатывать работающие рекомендации. 
             section.content.content_offset
                 .container
                     .row.align-items-center.justify-content-between
-                        .col-5
+                        .col-5.col-md-12.col-lg-7.col-xl-6
                             p.h3.mb-40 Сотрудничаем с ведущими мировыми вендорами
                             p Качество продукции проверено годами и является эталоном качественных технологий, позволяет гарантировать высокое качество всего поставляемого оборудования. Средние сроки поставки составляют 4-8 недель.
-                        .col-6
+                        .col-6.col-md-12.mt-md-40.col-lg-5.col-xl-6
                             .row.align-items-center
-                                .col-3.text-center.mb-20
+                                .col-3.text-center.mb-20.col-sm-4.col-md-3.col-lg-6
                                     img.img-fluid(src="../img/image-1.jpg")
-                                .col-3.text-center.mb-20
+                                .col-3.text-center.mb-20.col-sm-4.col-md-3.col-lg-6
                                     img.img-fluid(src="../img/image-6.jpg")
-                                .col-3.text-center.mb-20
+                                .col-3.text-center.mb-20.col-sm-4.col-md-3.col-lg-6
                                     img.img-fluid(src="../img/image-4.jpg")
-                                .col-3.text-center.mb-20
+                                .col-3.text-center.mb-20.col-sm-4.col-md-3.col-lg-6
                                     img.img-fluid(src="../img/image-6.jpg")
-                                .col-3.text-center
+                                .col-3.text-center.col-sm-4.mb-sm-20.col-md-3.col-lg-6
                                     img.img-fluid(src="../img/image-7.jpg")
-                                .col-3.text-center
+                                .col-3.text-center.col-sm-4.mb-lg-20.col-md-3.col-lg-6
                                     img.img-fluid(src="../img/image-3.jpg")
-                                .col-3.text-center
+                                .col-3.text-center.col-sm-4.col-md-3.col-lg-6.mb-lg-20.mb-sm-0
                                     img.img-fluid(src="../img/image-5.jpg")
-                                .col-3.text-center
+                                .col-3.text-center.col-sm-4.col-md-3.col-lg-6
                                     img.img-fluid(src="../img/image-3.jpg")
         include chunks/footer.pug
         script(src="./js/jquery.min.js")
