--- a/src/contact.pug
+++ b/src/contact.pug
@@ -3,7 +3,7 @@ html(lang="ru")
         meta(charset="UTF-8")
         meta(name="viewport", content="width=device-width, initial-scale=1.0")
         meta(http-equiv="X-UA-Compatible", content="ie=edge")
-        title Index Page
+        title Contact Page
         link(href="https://fonts.googleapis.com/css?family=Noto+Sans:400,700&display=swap&subset=cyrillic" rel="stylesheet")
         link(href='./css/slick.css', rel='stylesheet')
         link(href='./css/slick-theme.css', rel='stylesheet')
@@ -15,32 +15,36 @@ html(lang="ru")
             section.block-contact
                 .container
                     .row.align-items-center
-                        .col-3
+                        .col-3.col-sm-12.col-lg-12.col-xl-4
                             h1.h3 Контакты
-                            p.text-uppercase.text-bold Адрес
-                            p г. Москва, улица Правды дом 24
-                            p.text-uppercase.text-bold КАК СВЯЗАТЬСЯ
-                            p.mb-0 Телефон: 
-                                a.link-inverse(href="tel:+7(495) 792-81-27") +7(495) 792-81-27
-                            p E-mail: 
-                                a.link-inverse(href="mailto:info@inkam.org.ru") info@inkam.org.ru
-                            p.text-uppercase.text-bold ВРЕМЯ РАБОТЫ
-                            p.mb-0 ПН-ПТ с 9.00 до 18.00
-                        .col-9
+                            .row
+                                .col-12.col-sm-12.col-md-6.col-lg-4
+                                    p.text-uppercase.text-bold Адрес
+                                    p г. Москва, улица Правды дом 24
+                                .col-12.col-sm-12.col-md-6.col-lg-4
+                                    p.text-uppercase.text-bold КАК СВЯЗАТЬСЯ
+                                    p.mb-0 Телефон: 
+                                        a.link-inverse(href="tel:+7(495) 792-81-27") +7(495) 792-81-27
+                                    p E-mail: 
+                                        a.link-inverse(href="mailto:info@inkam.org.ru") info@inkam.org.ru
+                                .col-12.col-sm-12.col-md-6.col-lg-4
+                                    p.text-uppercase.text-bold ВРЕМЯ РАБОТЫ
+                                    p ПН-ПТ с 9.00 до 18.00
+                        .col-9.col-sm-12.mt-lg-40.col-lg-12.col-xl-8
                             .map
                                 <iframe src="https://yandex.ru/map-widget/v1/-/CGcyf0YI" width="100%" height="380" frameborder="0" allowfullscreen="false"></iframe>
             section.bg-gradient.content
                 .container
                     .row.align-items-center
-                        .col-4
+                        .col-4.col-sm-12.col-md-12.col-lg-8
                             p.content__title У вас остались вопросы?
                             p.mb-0 Укажите контактные данные, и  менеджер компании поможет вам составить индивидуальную смету и подобрать все необходимые материалы
-                        .col-3
+                        .col-3.col-sm-12.mt-lg-40.col-md-6.col-lg-6
                             form.form(action="")
                                 input.input(type="text" placeholder="Ваше имя")
                                 input.input.phone(type="number" placeholder="Телефон")
                                 input.btn.btn_default.btn_full-width.text-bold(type="submit" value="Нужна консультация")
-                        .col-5
+                        .col-5.col-sm-12.mt-sm-40.col-md-6.col-lg-6
                             .content__contact
                                 p.text-small.mb-0 Корр. счет: 30101810145250000974 в ГУ Банка России по ЦФО
                                 p.text-small.mb-0 Р/С: 30232810100000000004
