--- a/src/css/other/_footer.scss
+++ b/src/css/other/_footer.scss
@@ -21,6 +21,13 @@
         }
     }
     .contacts{
+        flex-wrap: wrap;
+        flex-direction: column;
+        align-items: flex-end;
+        justify-content: flex-end;
+        .contacts__item{
+            text-align: right;
+        }
         .contacts__link{
             &_phone{
                 color: $white;
@@ -40,19 +47,13 @@
         }
     }
 }
-@media all and (max-width: map-get($grid-breakpoints, 'xl')){
-    .footer{
-        .contacts{
-            flex-wrap: wrap;
-            justify-content: flex-end;
-        }
-    }
-}
+
 @media all and (max-width: map-get($grid-breakpoints, 'lg')){
     .footer{
         .navbar{
+            padding-left: 40px;
             flex-wrap: wrap;
-            justify-content: center;
+            justify-content: flex-start;
             .navbar__item{
                 padding: 6px 10px;
             }
@@ -68,13 +69,19 @@
             align-items: center;
         }
         .navbar{
-            padding: 18px 0;
+            justify-content: center;
+            padding: 14px 0 28px;
             .navbar__item {
                 padding: 12px;
             }
         }
         .contacts{
-            justify-content: center;
+            .contacts__item{
+                text-align: center;
+                & + .contacts__item{
+                    margin-top: 10px;
+                }
+            }
         }
     }
 }
@@ -85,13 +92,8 @@
             padding: 20px 0;
 
             .navbar__item {
-                padding: 18px 10px;
-                width: 100%;
+                padding: 8px 10px;
                 text-align: center;
-
-                & + .navbar__item {
-                    border-top: 1px solid $dark-blue;
-                }
             }
         }
     }
