--- a/src/css/section/_content.scss
+++ b/src/css/section/_content.scss
@@ -83,7 +83,6 @@
             width: 1px;
             height: 100%;
             background: $light-grey;
-
         }
     }
     .content__label{
@@ -107,7 +106,40 @@
         padding: 90px 0;
     }
 
-    & + .content{
+    & + .content.pt-0{
         padding-top: 0;
+    }
+}
+@media all and (max-width: map-get($grid-breakpoints, 'xl')){
+    .content{
+        .content__title{
+            font-size: 34px;
+        }
+    }
+}
+@media all and (max-width: map-get($grid-breakpoints, 'md')){
+    .content{
+        padding: 40px 0;
+        .content__contact{
+            margin-left: 0;
+            padding-left: 0;
+            &:before{
+                display: none;
+            }
+        }
+        &_offset{
+            padding: 60px 0;
+        }
+    }
+    .error-page{
+        padding: 60px 0;
+        .error-page__title{
+            font-size: 46px;
+            line-height: 54px;
+        }
+        .error-page__offer {
+            font-size: 14px;
+            line-height: 18px;
+        }
     }
 }
