--- a/src/css/section/_product.scss
+++ b/src/css/section/_product.scss
@@ -1,5 +1,6 @@
 .vendor-logo{
     padding: 20px;
+    max-width: 25%;
 }
 .vendor{
     position: relative;
@@ -73,5 +74,31 @@
         font-weight: bold;
         margin-top: 10px;
 
+    }
+}
+@media all and (max-width: map-get($grid-breakpoints, 'lg')){
+    .vendor{
+        .vendor__item{
+            .img-fluid{
+                height: 40px;
+                width: auto;
+            }
+        }
+    }
+}
+@media all and (max-width: map-get($grid-breakpoints, 'md')){
+    .vendor{
+        padding: 60px 0;
+        .vendor__item{
+            .img-fluid{
+                height: auto;
+                width: 100%;
+            }
+        }
+    }
+}
+@media all and (max-width: map-get($grid-breakpoints, 'sm')){
+    .vendor-logo{
+        max-width: 50%;
     }
 }
